--- a/Soil Nutrient Analysis.html
+++ b/Soil Nutrient Analysis.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 
     <style>
-        #map { height: 500px; }
+        #map { height: 500px; position: relative; }
         .table-container {
             max-height: 300px;
             overflow-y: auto;
@@ -35,17 +35,41 @@
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
             margin-bottom: 20px;
         }
+        .map-legend {
+            position: absolute;
+            bottom: 10px;
+            left: 10px;
+            background: white;
+            padding: 8px 12px;
+            border-radius: 6px;
+            box-shadow: 0 0 8px rgba(0,0,0,0.2);
+            font-size: 14px;
+            z-index: 999;
+        }
+        .map-legend i {
+            width: 12px;
+            height: 20px;
+            display: inline-block;
+            margin-right: 6px;
+            background-size: contain;
+            background-repeat: no-repeat;
+        }
+        .legend-green { background-image: url('https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-green.png'); }
+        .legend-blue { background-image: url('https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-blue.png'); }
     </style>
 </head>
 <body class="container py-4 bg-white text-dark">
     <h2 class="page-title">Soil Nutrient Analysis</h2>
 
-    <div id="map"></div>
+    <div id="map">
+        <div class="map-legend">
+            <div><i class="legend-green"></i> Latest Location</div>
+            <div><i class="legend-blue"></i> Recorded Point</div>
+        </div>
+    </div>
 
     <!-- Timestamp Display -->
-    <div id="timestampText">
-        🕒 Last update: --
-    </div>
+    <div id="timestampText">🕒 Last update: --</div>
 
     <!-- Buttons -->
     <div class="mt-3">
@@ -53,14 +77,15 @@
         <button id="clearBtn" class="btn btn-danger">🗑️ Clear All Points</button>
     </div>
 
-    <!-- Table of Recorded Points with Soil Data -->
+    <!-- Table of Recorded Points -->
     <div class="table-container">
         <table class="table table-bordered table-striped">
             <thead class="table-light">
                 <tr>
                     <th>No</th>
                     <th>Time (MY)</th>
-                    <th>Location</th>
+                    <th>Latitude</th>
+                    <th>Longitude</th>
                     <th>Moist (%)</th>
                     <th>pH</th>
                     <th>N (mg/kg)</th>
@@ -100,7 +125,6 @@
             "🗺 Street Map": streetLayer,
             "🛠 Satellite": satelliteLayer
         };
-
         L.control.layers(baseLayers).addTo(map);
 
         const greenIcon = new L.Icon({
@@ -117,6 +141,7 @@
 
         let currentMarker = null;
         let recordedPoints = [];
+        let recordedMarkers = [];
         let polyline = L.polyline([], { color: 'red' }).addTo(map);
 
         async function fetchThingSpeakData() {
@@ -146,16 +171,15 @@
 
             currentMarker = L.marker([lat, lng], { icon: greenIcon }).addTo(map);
             currentMarker.bindPopup(`
-				🟢 <strong>Updated Location</strong><br>
-				📍 <b>Location:</b> ${lat.toFixed(5)}, ${lng.toFixed(5)}<br>
-				💧 <b>Moisture:</b> ${moisture.toFixed(1)} %<br>
-				🌡️ <b>Air Temp:</b> ${temp.toFixed(1)} °C<br>
-				🧪 <b>pH:</b> ${ph.toFixed(1)}<br>
-				🧬 <b>N:</b> ${n} mg/kg<br>
-				🧬 <b>P:</b> ${p} mg/kg<br>
-				🧬 <b>K:</b> ${k} mg/kg<br>
-				⏰ <b>Time:</b> ${malaysiaTimeStr}
-			`);
+                🟢 <b>Location:</b> ${lat.toFixed(5)}, ${lng.toFixed(5)}<br>
+                💧 <b>Moisture:</b> ${moisture.toFixed(1)} %<br>
+                🌡️ <b>Air Temp:</b> ${temp.toFixed(1)} °C<br>
+                🧪 <b>pH:</b> ${ph.toFixed(1)}<br>
+                🧬 <b>N:</b> ${n} mg/kg<br>
+                🧬 <b>P:</b> ${p} mg/kg<br>
+                🧬 <b>K:</b> ${k} mg/kg<br>
+                ⏰ <b>Time:</b> ${malaysiaTimeStr}
+            `);
 
             map.setView([lat, lng], map.getZoom());
 
@@ -172,37 +196,53 @@
                 recordedPoints.push([d.lat, d.lng]);
                 polyline.setLatLngs(recordedPoints);
 
-                L.marker([d.lat, d.lng], { icon: blueIcon })
+                const markerNumber = recordedPoints.length;
+
+                const recordedMarker = L.marker([d.lat, d.lng], { icon: blueIcon })
                     .addTo(map)
                     .bindPopup(`
-						🔵 <strong>Recorded Point</strong><br>
-						📍 <b>Location:</b> ${d.lat.toFixed(5)}, ${d.lng.toFixed(5)}<br>
-						💧 <b>Moisture:</b> ${d.moisture.toFixed(1)} %<br>
-						🌡️ <b>Air Temp:</b> ${d.temp.toFixed(1)} °C<br>
-						🧪 <b>pH:</b> ${d.ph.toFixed(1)}<br>
-						🧬 <b>N:</b> ${d.n} mg/kg<br>
-						🧬 <b>P:</b> ${d.p} mg/kg<br>
-						🧬 <b>K:</b> ${d.k} mg/kg<br>
-						⏰ <b>Time:</b> ${d.malaysiaTimeStr}
-					`);
+                        🔵 <strong>Point ${markerNumber}</strong><br>
+                        📍 <b>Location:</b> ${d.lat.toFixed(5)}, ${d.lng.toFixed(5)}<br>
+                        💧 <b>Moisture:</b> ${d.moisture.toFixed(1)} %<br>
+                        🌡️ <b>Air Temp:</b> ${d.temp.toFixed(1)} °C<br>
+                        🧪 <b>pH:</b> ${d.ph.toFixed(1)}<br>
+                        🧬 <b>N:</b> ${d.n} mg/kg<br>
+                        🧬 <b>P:</b> ${d.p} mg/kg<br>
+                        🧬 <b>K:</b> ${d.k} mg/kg<br>
+                        ⏰ <b>Time:</b> ${d.malaysiaTimeStr}
+                    `);
+                recordedMarkers.push(recordedMarker);
 
-                const row = `<tr>
-                    <td>${recordedPoints.length}</td>
+                const row = document.createElement("tr");
+                row.innerHTML = `
+                    <td>${markerNumber}</td>
                     <td>${d.malaysiaTimeStr}</td>
-                    <td>${d.lat.toFixed(5)}, ${d.lng.toFixed(5)}</td>
+                    <td>${d.lat.toFixed(5)}</td>
+                    <td>${d.lng.toFixed(5)}</td>
                     <td>${d.moisture.toFixed(1)}</td>
                     <td>${d.ph.toFixed(1)}</td>
                     <td>${d.n}</td>
                     <td>${d.p}</td>
                     <td>${d.k}</td>
                     <td>${d.temp.toFixed(1)}</td>
-                </tr>`;
-                document.getElementById('recordTableBody').insertAdjacentHTML('beforeend', row);
+                `;
+                row.style.cursor = "pointer";
+                row.addEventListener("click", () => {
+                    const marker = recordedMarkers[markerNumber - 1];
+                    if (marker) {
+                        map.setView(marker.getLatLng(), 18, { animate: true });
+                        marker.openPopup();
+                    }
+                });
+
+                document.getElementById('recordTableBody').appendChild(row);
             }
         });
 
         document.getElementById('clearBtn').addEventListener('click', () => {
             recordedPoints = [];
+            recordedMarkers.forEach(m => map.removeLayer(m));
+            recordedMarkers = [];
             polyline.setLatLngs([]);
             document.getElementById('recordTableBody').innerHTML = '';
         });
